# bootstrap-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/boost/thread/: CMakeLists.txt
src/test-gflags/: CMakeLists.txt  main.cpp
src/test-glog/: CMakeLists.txt  main.cpp
